Minor fix to change header size on small screens

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -202,6 +202,12 @@ a .icon-ok {
   display: none;
 }
 
+@media (max-width: 767px) {
+  .hero-unit h1 {
+    font-size: 38.5px;
+  }
+}
+
 /*
 .alert-popover {
   padding: 0px;
